# Spruce

./: .gitignore  README.md  ROADMAP.md  io.github.shonubot.Spruce.json  io.github.shonubot.Spruce.yml  meson.build  pyproject.toml
build-aux/flatpak/: io.github.shonubot.Spruce.json
data/: io.github.shonubot.Spruce.gschema.xml
data/appdata/: io.github.shonubot.Spruce.metainfo.xml
data/desktop/: io.github.shonubot.Spruce.desktop
po/: LINGUAS  POTFILES  meson.build
src/: __init__.py  app.py
src/spruce/: __main__.py  app.py
ui/: window.blp  window.ui
