[build-system]
requires = ["meson-python>=0.15", "wheel"]
build-backend = "mesonpy"

[project]
name = "spruce"
dynamic = ["version"]
description = "Spruce is a lightweight cache cleaner and system maintenance tool designed for GNU/Linux. It helps keep your system fresh by clearing unneeded caches, logs, temporary files and unused Flatpak runtimes in a clean, Adwaita-based GTK interface."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kavish Advani" }]
license = { text = "GPL-3.0-or-later" }
dependencies = ["PyGObject>=3.44"]

[project.scripts]
spruce = "spruce.__main__:main"
